--- a/src/output.css
+++ b/src/output.css
@@ -6,6 +6,14 @@
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
+.lighting {
+  opacity: .55;
+}
+
+.lightingPlus:hover {
+  opacity: 1;
+}
+
 body {
   font-family: 'DM Sans', sans-serif;
 }
